<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SentPrescriotionForemActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tool_bar_ID"
            android:background="@color/purple_200">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="64dp"
                android:layout_height="50dp"
                android:id="@+id/profileImage_ID">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UserName"
                android:layout_marginLeft="25dp"
                android:id="@+id/profileName_ID">

            </TextView>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Prescription Type: "
            android:layout_marginTop="5dp"
            android:id="@+id/type_ID">

        </TextView>

        <Switch
            android:id="@+id/presType_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Image/PDF "
            android:textOff="Text"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:thumb="@drawable/bg_track"
            android:track="@drawable/sw_track"
            android:showText="true"
            android:layout_toRightOf="@+id/type_ID">

        </Switch>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/em_textLayout_ID"
        android:visibility="visible"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/em_info"
            android:textSize="25sp">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="type prescription..."
            android:id="@+id/em_prescriptionEdit_ID"
            android:layout_below="@+id/info"
            android:layout_marginTop="10dp">

        </EditText>

        <EditText
            android:id="@+id/em_meetLinkEdit_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/em_prescriptionEdit_ID"
            android:layout_marginTop="10dp"
            android:hint="meet link...">

        </EditText>

        <Button
            android:id="@+id/em_presSent1_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/em_meetLinkEdit_ID"
            android:layout_marginTop="20dp"
            android:text="sent">

        </Button>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/em_imageLayout"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/em_info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/em_info1"
            android:textSize="25sp">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/em_info2"
            android:layout_below="@+id/em_info1"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:id="@+id/em_info3">

        </TextView>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_image_24"
            android:layout_toRightOf="@+id/em_info3"
            android:layout_below="@+id/em_info1"
            android:layout_marginTop="10dp"
            android:id="@+id/em_image_ID"
            android:layout_marginLeft="20dp">

        </ImageButton>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/em_info3"
            android:layout_marginTop="20dp"
            android:id="@+id/em_presSent_ID"
            android:text="sent">

        </Button>

    </RelativeLayout>


</LinearLayout>